# lineCounter

./: .gitignore  CMakeLists.txt  LinesCounter.sln  README.md  lineCounter.ignore
LinesCounter/: LinesCounter.cpp  LinesCounter.vcxproj  LinesCounter.vcxproj.filters  ignore.txt  path.txt  stdafx.cpp
VS/: lineCounter.sln  lineCounter.vcxproj  lineCounter.vcxproj.filters
src/: CMakeLists.txt  lineCounter.cpp
